# kani-ext-vllm

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml  pythonpublish.yml
kani/ext/vllm/: __init__.py  bases.py  commandr.py  engine.py  http_engine.py  openai_compat_engine.py  utils.py  vllm_server.py
sandbox/: basic_fc.py  model_test_trains.py  zero_conversation.py
tests/: conftest.py  test_equivalence.py  test_generation.py  test_server.py
tests/old/: equivalence.py
